# TileDB-Segy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  serialize.py  setup.cfg  setup.py  tutorial.ipynb
.github/workflows/: ci.yml  release.yml
notebooks/: seismic_inversion.ipynb  tutorial.ipynb
tests/: conftest.py  segyio_utils.py  test_api.py  test_cli.py  test_convert.py  test_structured.py  test_tdbwrapper.py  test_unstructured.py  test_utils.py
tiledb/segy/: __init__.py  cli.py  convert.py  indexables.py  structured.py  tdbwrapper.py  types.py  unstructured.py  utils.py
tilesegy/: __init__.py  _singledispatchmethod.py  api.py  cli.py  convert.py  create.py  indexables.py  singledispatchmethod.py  utils.py
